--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Document</title>
-    <h1>Hello, I'm Abhishek Koushik</h1>
-</head>
-<body>
-    
-</body>
+  <head>
+    <title>Event Registration Form</title>
+  </head>
+  <body>
+    <h1 style="text-align: center">Event Registration Form</h1>
+    <p style="font-style: italic">
+      please enter your contact information to participate in the event
+    </p>
+    <hr />
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" />
+      <br />
+      <br />
+      <label for="email">Email:</label>
+      <input type="email" id="email" /> <br />
+      <br />
+      <label for="number">Number:</label>
+      <input type="number" id="number" /> <br />
+      <br />
+      <label for="institution">Institution/Organisation Name:</label>
+      <input type="text" id="institution" /> <br />
+      <br />
+      <label for="course">Course or program interested in</label> <br />
+      <select id="course">
+        <option value="hackathon">hackathon</option>
+        <option value="github">github workshop</option>
+        <option value="ai-literacy">Gen AI literacy</option>
+        <option value="vibeathon">vibeathon</option>
+      </select>
+      <br />
+      <br />
+      <fieldset
+        style="
+          background-color: aquamarine;
+          background-image: url(https://imgs.search.brave.com/iLnCftjprOpcSWbuMKGhhd_KNSKclpxTZEAJBRFWh7c/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9zdGF0/aWMuZGMuY29tLzIw/MjUtMDkvYm1kX3Rv/dXRfZGNodl8xeDEu/cG5nP3c9OTAw);
+        "
+      >
+        <legend>Gender</legend>
+        <input type="radio" id="male" />
+        <label for="male">male</label>
+        <br />
+        <input type="radio" id="gender" />
+        <label for="female">female</label> <br />
+      </fieldset>
+      <br />
+      <label for="Date of birth">DOB:</label>
+      <input type="date" /> <br />
+      <br />
+      <fieldset
+        style="border: 25px outset black; width: auto; font-style: italic"
+      >
+        <legend>Event Type</legend>
+        <input type="checkbox" />
+        <label for="kalpavikas">kalpavikas</label> <br />
+        <input type="checkbox" />
+        <label for="TIFA">TIFA</label> <br />
+        <input type="checkbox" />
+        <label for="HLGF">HLGF</label> <br />
+        <input type="checkbox" />
+        <label for="KLOP">KLOP</label> <br />
+      </fieldset>
+      <br />
+      <input type="submit" />
+      <br />
+      <br />
+      <input type="reset" />
+    </form>
+    <footer>
+      <p style="font-style: italic">@rvu.guru</p>
+    </footer>
+    <div
+      style="
+        width: 500px;
+        height: 500px;
+        background-color: black;
+        background-image: url(https://media1.tenor.com/m/FhBpXcC2lNgAAAAd/xqc-cuh.gif);
+        background-repeat: repeat-y;
+        background-position: top right;
+      "
+    ></div>
+  </body>
 </html>
+convert a html file into 2 parafraphs use an id selector to the style the
+heading, apply all text properties. Use class selector to style both the
+paragraphs, to apply font size and bg colour ssssss
